--- a/_data/other.yml
+++ b/_data/other.yml
@@ -5,5 +5,5 @@
   - Listening music - <a href="/music/">Play list</a>.
 - Social Service: 
   - Volunteer for various environment conservation activities.
-  - DOP for diffrent awareness campaign videos.
+  - Actively involved in conceptualizing and development of social/enviorment awareness videos.
   - Provided technical support for Nagapattinam police in Tsunami relief activities.
