--- a/_data/other.yml
+++ b/_data/other.yml
@@ -5,5 +5,5 @@
   - Listening music - <a href="/music/">Play list</a>.
 - Social Service: 
   - Volunteer for various environment conservation activities.
-  - 'Actively involved in conceptualizing and development of social/enviorment awareness <a href=writing/tags/#Short%20Film">videos</a>'.
+  - 'Actively involved in conceptualizing and development of social/enviorment awareness <a href="writing/tags/#Short%20Film">videos</a>'.
   - Provided technical support for Nagapattinam police in Tsunami relief activities.
