--- a/_data/sections.yml
+++ b/_data/sections.yml
@@ -12,9 +12,9 @@
   id: education
   layout: education
 
-#- name: Projects
-#  id: projects
-#  layout: project
+- name: Projects
+  id: projects
+  layout: project
 
 - name: Publications
   id: publications
