--- a/_data/about.yml
+++ b/_data/about.yml
@@ -1,3 +1,10 @@
 About Me:
      - 'I am Vipin Madhavanunni, I loves programming and playing with Linux box. I have worked as a Software engineer at <a href="http://www.embedur.com/">embedUR systems</a> priviously. I got my Masters from <a href="http://www.annauniv.edu/">Anna University</a> and bachelor from <a href="http://www.bdu.ac.in/">Bharathidasan University</a>.'
      - 'Personally my pastimes are thinking, trekking, photography, hanging out with friends and a bit of social work.'
+about:
+     - 'Remix of <a href="http://www.ybrikman.com/">Yevgeniy Brikman</a>, <a href="http://jmcglone.com/">Jonathan McGlone</a> and <a href="https://github.com/philipithomas/jekyll-resume">jekyll-resume</a>.'
+     - 'Licensed under a <a rel="license" href="http://creativecommons.org/licenses/by/3.0/deed.en_US">Creative Commons Attribution 3.0 Unported License</a> except contents under links /profile /projects /posts /photos /assets and github source under _data/, _posts/, /assets and _config.yml.'
+     - 'Hosted on <a href="https://github.com/thekkedam/vm.thekkedam.org" title="This site hosted on GitHub">GitHub</a> with <a href="http://pages.github.com/" title="GitHub Pages">GitHub Pages</a>.'
+     - 'Marked up with <a href="http://validator.w3.org/check?uri=http%3A%2F%2Fvm.thekkedam.org%2F" title="HTML5 Validator">W3C validated HTML5</a>'
+     - '<a href="http://www.w3.org/TR/WCAG20/" title="WCAG 2.0">WCAG 2.0</a> compliant.'
+     - 'Powered by <a href="http://jekyllrb.com/" title="Jekyll">Jekyll</a>.'
