--- a/_data/about.yml
+++ b/_data/about.yml
@@ -3,6 +3,8 @@ About Me:
      - 'Personally my pastimes are thinking, trekking, photography, hanging out with friends and a bit of social work.'
 about:
      - 'Remix of <a href="http://www.ybrikman.com/">Yevgeniy Brikman</a>, <a href="http://jmcglone.com/">Jonathan McGlone</a> and <a href="https://github.com/philipithomas/jekyll-resume">jekyll-resume</a>.'
+     - 'Using icons <a href="http://fortawesome.github.io/Font-Awesome/">Font Awesome</a>.'
+     - 'Better writer by <a href="https://app.grammarly.com/">Grammarly</a>.'
      - 'Licensed under a <a rel="license" href="http://creativecommons.org/licenses/by/3.0/deed.en_US">Creative Commons Attribution 3.0 Unported License</a> except contents under links /profile /projects /posts /photos /assets and github source under _data/, _posts/, /assets and _config.yml.'
      - 'Hosted on <a href="https://github.com/thekkedam/vm.thekkedam.org" title="This site hosted on GitHub">GitHub</a> with <a href="http://pages.github.com/" title="GitHub Pages">GitHub Pages</a>.'
      - 'Marked up with <a href="http://validator.w3.org/check?uri=http%3A%2F%2Fvm.thekkedam.org%2F" title="HTML5 Validator">W3C validated HTML5</a>'
