--- a/.travis.yml
+++ b/.travis.yml
@@ -4,9 +4,9 @@ rvm:
 - 2.1
 
 before_script:
- - chmod +x ./_script/cibuild 
+ - chmod +x ./_scripts/cibuild 
 
-script: ./_script/cibuild
+script: ./_scripts/cibuild
 
 branches:
   only:
