--- a/_data/other.yml
+++ b/_data/other.yml
@@ -1,9 +1,9 @@
 - Intrest:
   - 'Writing - <a href="/writing/poems/">Poems</a>.'
-  - 'Photography - <a href="/writing/tags/#Fraction%20of%20Second">Fraction of Second</a>.'
-  - 'Reading books - <a href="/wish/#book">List</a>.'
+  - 'Photography - <a href="/writing/fos/">Fraction of Second</a>.'
+  - 'Reading books - <a href="/writing/wish/">List</a>.'
   - 'Listening music - <a href="/music/">Play list</a>.'
 - Social Service: 
   - Volunteer for various environment conservation activities.
-  - 'Actively involved in conceptualizing and development of social/enviorment awareness <a href="/writing/tags/#Short%20Film">videos</a>.'
+  - 'Actively involved in conceptualizing and development of social/enviorment awareness <a href="/writing/tags/video">videos</a>.'
   - Provided technical support for Nagapattinam police in Tsunami relief activities.
