--- a/_config.yml
+++ b/_config.yml
@@ -105,9 +105,9 @@ highlighter: pygments
 timezone: 'Europe/Berlin'
 
 # Exclude personal
-#exclude:
-#  - "_personal"
-#  - "_drafts"
+exclude:
+  - "_personal"
+  - "_drafts"
 
 # include
 include:
