--- a/_data/about.yml
+++ b/_data/about.yml
@@ -6,7 +6,7 @@ about:
      - 'Using icons <a href="http://fortawesome.github.io/Font-Awesome/">Font Awesome</a>.'
      - 'Better writer by <a href="https://app.grammarly.com/">Grammarly</a>.'
      - 'Licensed under a <a rel="license" href="http://creativecommons.org/licenses/by/3.0/deed.en_US">Creative Commons Attribution 3.0 Unported License</a> except contents under links /profile /projects /posts /photos /assets and github source under _data/, _posts/, /assets and _config.yml.'
-     - 'Hosted on <a href="https://github.com/thekkedam/vm.thekkedam.org" title="This site hosted on GitHub">GitHub</a> with <a href="http://pages.github.com/" title="GitHub Pages">GitHub Pages</a>.'
+     - 'Hosted on <a href="https://github.com/thekkedam/vm" title="This site hosted on GitHub">GitHub</a> with <a href="http://pages.github.com/" title="GitHub Pages">GitHub Pages</a>.'
      - 'Marked up with <a href="http://validator.w3.org/check?uri=http%3A%2F%2Fvm.thekkedam.org%2F" title="HTML5 Validator">W3C validated HTML5</a>'
      - '<a href="http://www.w3.org/TR/WCAG20/" title="WCAG 2.0">WCAG 2.0</a> compliant.'
      - 'Powered by <a href="http://jekyllrb.com/" title="Jekyll">Jekyll</a>.'
