--- a/_data/about.yml
+++ b/_data/about.yml
@@ -10,4 +10,4 @@ about:
      - 'Marked up with <a href="http://validator.w3.org/check?uri=http%3A%2F%2Fvm.thekkedam.org%2F" title="HTML5 Validator">W3C validated HTML5</a>'
      - '<a href="http://www.w3.org/TR/WCAG20/" title="WCAG 2.0">WCAG 2.0</a> compliant.'
      - 'Powered by <a href="http://jekyllrb.com/" title="Jekyll">Jekyll</a>.'
-     - 'Made fast and cashed by <a href="https://www.cloudflare.com/">CloudFlare</a>'
+     - 'IPv6, https support and made faster by <a href="https://www.cloudflare.com/">CloudFlare</a>'
