--- a/.gitignore
+++ b/.gitignore
@@ -26,5 +26,6 @@ blogger
 # Drafts
 _drafts
 
-  #testfile
 # Added by script - add other file before this.
+assets/docs/ref/W-meter-An_open-source_WLAN product_evaluation_framework.pdf
+run-update.log
