--- a/_data/about.yml
+++ b/_data/about.yml
@@ -2,7 +2,7 @@ About Me:
      - 'I am Vipin Madhavanunni, I loves programming and playing with Linux box. I have worked as a Software engineer at <a href="http://www.embedur.com/">embedUR systems</a> priviously. I got my Masters from <a href="http://www.annauniv.edu/">Anna University</a> and bachelor from <a href="http://www.bdu.ac.in/">Bharathidasan University</a>.'
      - 'Personally my pastimes are thinking, trekking, photography, hanging out with friends and a bit of social work.'
 about:
-     - 'Remix of <a href="http://www.ybrikman.com/">Yevgeniy Brikman</a>, <a href="http://jmcglone.com/">Jonathan McGlone</a> and <a href="https://github.com/philipithomas/jekyll-resume">jekyll-resume</a>.'
+     - 'Remix of <a href="http://www.ybrikman.com/">Yevgeniy Brikman</a>, <a href="http://jmcglone.com/">Jonathan McGlone</a>, <a href="https://github.com/philipithomas/jekyll-resume">jekyll-resume</a> and <a href="https://github.com/vrypan/jekyll-post-via-web">Post via web</a>'
      - 'Using icons <a href="http://fortawesome.github.io/Font-Awesome/">Font Awesome</a>.'
      - 'Better writer by <a href="https://app.grammarly.com/">Grammarly</a>.'
      - 'Licensed under a <a rel="license" href="http://creativecommons.org/licenses/by/3.0/deed.en_US">Creative Commons Attribution 3.0 Unported License</a> except contents under links /profile /projects /posts /photos /assets and github source under _data/, _posts/, /assets and _config.yml.'
