--- a/_data/about.yml
+++ b/_data/about.yml
@@ -11,5 +11,5 @@ about:
      - '<a href="http://www.w3.org/TR/WCAG20/" title="WCAG 2.0">WCAG 2.0</a> compliant.'
      - 'Powered by <a href="http://jekyllrb.com/" title="Jekyll">Jekyll</a>.'
      - 'IPv6, https support and made faster by <a href="https://www.cloudflare.com/">CloudFlare</a>.'
-     - 'Image are served by <a href="http://rawgit.com/>RawGit</a> CDN.'
+     - 'Images are served by <a href="http://rawgit.com/">RawGit</a> CDN.'
 
