--- a/.gitignore
+++ b/.gitignore
@@ -26,6 +26,10 @@ blogger
 # Drafts
 _drafts
 
+# vendor
+deploy/vendor
+deploy/.bundle
+
 # Added by script - add other file before this.
 assets/docs/ref/W-meter-An_open-source_WLAN product_evaluation_framework.pdf
 run-update.log
