--- a/.gitignore
+++ b/.gitignore
@@ -33,3 +33,4 @@ deploy/.bundle
 # Added by script - add other file before this.
 assets/docs/ref/W-meter-An_open-source_WLAN product_evaluation_framework.pdf
 run-update.log
+versions.json.back
