--- a/.gitignore
+++ b/.gitignore
@@ -18,7 +18,7 @@ _site/
 .vagrant
 
 # Gemfile
-./Gemfile.lock
+#./Gemfile.lock
 
 # Temp blogger xml files
 blogger
@@ -33,4 +33,6 @@ deploy/.bundle
 # Added by script - add other file before this.
 assets/docs/ref/W-meter-An_open-source_WLAN product_evaluation_framework.pdf
 run-update.log
+Gemfile.lock
+versions.json
 versions.json.back
