--- a/deploy/Gemfile
+++ b/deploy/Gemfile
@@ -4,11 +4,11 @@ require 'json'
 require 'open-uri'
 versions = JSON.parse(open('./versions.json').read)
 
-gem 'github-pages', versions['github-pages']
-#gem 'pygments.rb', versions['pygments.rb']
-#gem 'jekyll-mentions', versions['jekyll-mentions']
-#gem 'jekyll-sitemap', versions['jekyll-sitemap']
-#gem 'jekyll-gist', versions['jekyll-gist']
-#gem 'jekyll-paginate', versions['jekyll-paginate']
+gem 'github-pages'
+gem 'pygments.rb'
+gem 'jekyll-mentions'
+gem 'jekyll-sitemap'
+gem 'jekyll-gist'
+gem 'jekyll-paginate'
 gem 'html-proofer'
 
