--- a/.gitignore
+++ b/.gitignore
@@ -32,7 +32,7 @@ deploy/.bundle
 
 # Added by script - add other file before this.
 assets/docs/ref/W-meter-An_open-source_WLAN product_evaluation_framework.pdf
-run-update.log
+run-cmd.log
 Gemfile.lock
 versions.json
 versions.json.back
